get rid of some really bad legacy in DS type system and enhance ANALYZE